--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "date-fns": "^2.29.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.1",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
