--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.7",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
     "phosphor-react": "^1.4.1",
@@ -18,7 +19,8 @@
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-syntax-highlighter": "^15.5.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
